1.5/service-frind.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: frontend
    protocol: TCP
    port: 9001
    targetPort: 80
