1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netology-ingress
  annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testingress.maksim
    http:
           paths:
             - path: /
               pathType: Prefix
               backend:
                 service:
                   name: frontend
                   port:
                     number: 9001
             - path: /api
               pathType: Prefix
               backend:
                 service:
                   name: backend
                   port:
                     number: 9002
